--- a/Tabbar_/Third_Tab_New_ViewController.xib
+++ b/Tabbar_/Third_Tab_New_ViewController.xib
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="Third_Tab_New_ViewController">
             <connections>
+                <outlet property="searchBtn" destination="wJ9-Sk-oX3" id="iic-Tp-YOg"/>
+                <outlet property="searchView" destination="HSE-69-uW9" id="FIr-kk-IL9"/>
                 <outlet property="tableView" destination="Ynp-MN-O5t" id="xq3-2s-dXD"/>
                 <outlet property="tagView" destination="2lo-gK-pdp" id="8bW-yV-rUH"/>
                 <outlet property="view" destination="Vwb-oI-uw8" id="9hB-D5-pqp"/>
@@ -17,11 +20,11 @@
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view clearsContextBeforeDrawing="NO" contentMode="scaleToFill" id="Vwb-oI-uw8">
-            <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+            <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="55h-F0-Ynb">
-                    <rect key="frame" x="0.0" y="44" width="414" height="64"/>
+                    <rect key="frame" x="0.0" y="0.0" width="320" height="64"/>
                     <subviews>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4iL-pf-5qa">
                             <rect key="frame" x="8" y="10" width="44" height="44"/>
@@ -34,48 +37,73 @@
                                 <action selector="didPressMenu:" destination="-1" eventType="touchUpInside" id="JEU-qL-9hH"/>
                             </connections>
                         </button>
-                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Truyện" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="jku-yo-lYM">
-                            <rect key="frame" x="177" y="22" width="60" height="21"/>
-                            <constraints>
-                                <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="42" id="O1c-ob-Lf4"/>
-                                <constraint firstAttribute="height" constant="21" id="bt4-kb-a9q"/>
-                            </constraints>
-                            <fontDescription key="fontDescription" type="system" weight="medium" pointSize="19"/>
-                            <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-                            <nil key="highlightedColor"/>
-                        </label>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="QQn-G4-hll">
-                            <rect key="frame" x="362" y="10" width="44" height="44"/>
+                            <rect key="frame" x="268" y="10" width="44" height="44"/>
                             <constraints>
                                 <constraint firstAttribute="width" constant="44" id="dLB-qS-jNV"/>
                                 <constraint firstAttribute="height" constant="44" id="j76-ke-Bjd"/>
                             </constraints>
-                            <state key="normal" image="ic_search"/>
-                            <connections>
-                                <action selector="didPressSearch:" destination="-1" eventType="touchUpInside" id="w4W-eF-p8o"/>
-                            </connections>
+                            <state key="normal" image="ico_vip"/>
                         </button>
+                        <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y4c-3n-YtP">
+                            <rect key="frame" x="60" y="13" width="200" height="38"/>
+                            <subviews>
+                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_search" translatesAutoresizingMaskIntoConstraints="NO" id="wJ9-Sk-oX3">
+                                    <rect key="frame" x="167" y="6.5" width="25" height="25"/>
+                                    <constraints>
+                                        <constraint firstAttribute="width" constant="25" id="4u0-o1-dZz"/>
+                                        <constraint firstAttribute="height" constant="25" id="SLi-l8-dyh"/>
+                                    </constraints>
+                                </imageView>
+                            </subviews>
+                            <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                            <constraints>
+                                <constraint firstItem="wJ9-Sk-oX3" firstAttribute="centerY" secondItem="y4c-3n-YtP" secondAttribute="centerY" id="Hnd-0P-g3N"/>
+                                <constraint firstAttribute="trailing" secondItem="wJ9-Sk-oX3" secondAttribute="trailing" constant="8" id="QLp-7u-brN"/>
+                                <constraint firstAttribute="height" constant="38" id="gwB-Pt-lmm"/>
+                            </constraints>
+                            <userDefinedRuntimeAttributes>
+                                <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                    <real key="value" value="20.5"/>
+                                </userDefinedRuntimeAttribute>
+                            </userDefinedRuntimeAttributes>
+                        </view>
+                        <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Từ khóa tìm kiếm" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="HSE-69-uW9">
+                            <rect key="frame" x="68" y="15" width="155" height="34"/>
+                            <constraints>
+                                <constraint firstAttribute="height" constant="34" id="77d-h6-Zjc"/>
+                            </constraints>
+                            <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                            <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" smartDashesType="no" smartInsertDeleteType="no" smartQuotesType="no"/>
+                            <connections>
+                                <outlet property="delegate" destination="-1" id="qnS-HV-TVq"/>
+                            </connections>
+                        </textField>
                     </subviews>
                     <color key="backgroundColor" red="0.1176470588" green="0.57254901960000004" blue="0.54901960780000003" alpha="1" colorSpace="calibratedRGB"/>
                     <constraints>
                         <constraint firstItem="4iL-pf-5qa" firstAttribute="leading" secondItem="55h-F0-Ynb" secondAttribute="leading" constant="8" id="0fC-W9-InA"/>
+                        <constraint firstItem="HSE-69-uW9" firstAttribute="leading" secondItem="4iL-pf-5qa" secondAttribute="trailing" constant="16" id="3z3-us-wWK"/>
+                        <constraint firstItem="y4c-3n-YtP" firstAttribute="leading" secondItem="4iL-pf-5qa" secondAttribute="trailing" constant="8" symbolic="YES" id="45z-uf-Ntl"/>
                         <constraint firstItem="4iL-pf-5qa" firstAttribute="top" secondItem="55h-F0-Ynb" secondAttribute="top" constant="10" id="Bfa-FI-cTE"/>
-                        <constraint firstItem="jku-yo-lYM" firstAttribute="top" secondItem="55h-F0-Ynb" secondAttribute="top" constant="22" id="JzQ-tS-GgE"/>
-                        <constraint firstItem="jku-yo-lYM" firstAttribute="centerX" secondItem="55h-F0-Ynb" secondAttribute="centerX" id="MeL-Ff-3ge"/>
+                        <constraint firstItem="QQn-G4-hll" firstAttribute="leading" secondItem="HSE-69-uW9" secondAttribute="trailing" constant="45" id="MtH-2o-XA8"/>
                         <constraint firstItem="QQn-G4-hll" firstAttribute="top" secondItem="55h-F0-Ynb" secondAttribute="top" constant="10" id="O8M-Si-MD1"/>
                         <constraint firstAttribute="height" constant="64" id="X0d-S0-OfQ"/>
+                        <constraint firstItem="y4c-3n-YtP" firstAttribute="top" secondItem="55h-F0-Ynb" secondAttribute="top" constant="13" id="nZz-rY-rIr"/>
                         <constraint firstAttribute="trailing" secondItem="QQn-G4-hll" secondAttribute="trailing" constant="8" id="qck-mi-zIt"/>
+                        <constraint firstItem="HSE-69-uW9" firstAttribute="top" secondItem="55h-F0-Ynb" secondAttribute="top" constant="15" id="sMK-dF-mHu"/>
+                        <constraint firstItem="QQn-G4-hll" firstAttribute="leading" secondItem="y4c-3n-YtP" secondAttribute="trailing" constant="8" symbolic="YES" id="ud4-vf-sT3"/>
                     </constraints>
                 </view>
                 <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Ynp-MN-O5t">
-                    <rect key="frame" x="0.0" y="158" width="414" height="704"/>
+                    <rect key="frame" x="0.0" y="114" width="320" height="454"/>
                     <connections>
                         <outlet property="dataSource" destination="-1" id="sDq-n8-Z9i"/>
                         <outlet property="delegate" destination="-1" id="lsl-nr-jxR"/>
                     </connections>
                 </tableView>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="2lo-gK-pdp" customClass="Tag_View" customModule="MeBook" customModuleProvider="target">
-                    <rect key="frame" x="10" y="118" width="394" height="32"/>
+                    <rect key="frame" x="10" y="74" width="300" height="32"/>
                     <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="32" id="rcz-lZ-gFv"/>
@@ -105,5 +133,9 @@
     <resources>
         <image name="ic_menu" width="33" height="33"/>
         <image name="ic_search" width="50.5" height="50.5"/>
+        <image name="ico_vip" width="58.5" height="58.5"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
